fix: align top menu with primary navigation

--- a/assets/css/template-parts/header-nav.scss
+++ b/assets/css/template-parts/header-nav.scss
@@ -43,8 +43,7 @@
 }
 
 .header-menu.top {
-	width: 50%;
-	float: right;
+	flex: 1;
 	display: flex;
 	font-size: 1rem;
 	font-weight: 500;
@@ -53,7 +52,7 @@
 	justify-content: flex-end;
 }
 .social-menu {
-	width: 223px;
+	width: auto;
 }
 
 .header-menu.bottom {
